{
    "version": 1,
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "b1c993a0-66fa-4a62-aa55-6dabe41e933e",
            "actions": [
                {
                    "name": "Rotate",
                    "type": "Button",
                    "id": "c36f022a-502d-4fd8-9f71-fb33a5737c4a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "3e1c4864-ece1-49f7-a360-d90ed4f75920",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "a1878424-2fb0-4b5a-9788-3bbe83270e65",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FallFaster",
                    "type": "Button",
                    "id": "a2b52d54-917c-4f69-9793-d1679b2df67a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Touch",
                    "type": "Button",
                    "id": "0b2975bf-3712-4e0c-842b-d14e99ddd897",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b472998c-f0d4-43e8-a909-be59f72378cd",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardandMouse",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd43ad87-c6b7-4e51-a6bd-fe89cd02f9cc",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": ";TouchScreen",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3dc18671-7669-450a-9ec2-03dbbbe101ec",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardandMouse",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7eac47af-17a9-46e4-8f5e-fe3b5a226ff3",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardandMouse",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "68c90e38-bfbf-4d43-b932-c3e1254d3143",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardandMouse",
                    "action": "FallFaster",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "79e0407a-23e0-4c1a-aa4d-0ab9f6558a7f",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": ";TouchScreen",
                    "action": "FallFaster",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "260019ca-6a83-476e-9b10-8efd1d959ae2",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": ";TouchScreen",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardandMouse",
            "bindingGroup": "KeyboardandMouse",
            "devices": []
        },
        {
            "name": "TouchScreen",
            "bindingGroup": "TouchScreen",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}